--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,23 +3,23 @@
   "name": "Zeeilant AI Solutions",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "/zeeilant-website/favicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/png"
     },
     {
-      "src": "logo192.png",
+      "src": "/zeeilant-website/logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "/zeeilant-website/logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/zeeilant-website/",
   "display": "standalone",
   "theme_color": "#FF7F2A",
-  "background_color": "#121212"
+  "background_color": "#ffffff"
 } 
