--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Lint
-      run: npm run lint
+    # - name: Lint
+    #   run: npm run lint
       
     - name: Build
       run: npm run build
