--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,23 +2,9 @@
   "short_name": "Zeeilant",
   "name": "Zeeilant AI Solutions",
   "icons": [
-    {
-      "src": "/zeeilant-website/favicon.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/png"
-    },
-    {
-      "src": "/zeeilant-website/logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "/zeeilant-website/logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+
   ],
-  "start_url": "/zeeilant-website/",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#FF7F2A",
   "background_color": "#ffffff"
