--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,12 +29,11 @@ jobs:
           cache: 'npm'
       
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       
       - name: Build
         run: npm run build
-        env:
-          VITE_BASE_URL: '/zeeilant-website/'
+    
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
